--- a/backend/templates/faq.html
+++ b/backend/templates/faq.html
@@ -8,7 +8,7 @@
     <h1>About</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!--a class="navbar-brand"><img id = "logo2" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"></a-->
-        <a class="navbar-brand" href="">Tōku</a>
+        <a class="navbar-brand" href=""> <img src = https://i.ibb.co/9wMy55x/toku-logo-v2.png%22></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,33 +22,40 @@
           </div>
         </div>
     </nav>
+    <h4> Our Mission</h4> <br>
+    <div class = "info">
+      <h3> Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.<br><br> </h3>
+    </div>
     <div>
-      <h4>Meet the creators:</h4>
+      <h4>Meet the Creators</h4>
     </div>
     <div class="row">
       <div class="column">
         <h3>Sky Jung</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
-        <p3>hello! my name is sky jung and i like anime</p3>
+        <img id = "logo" src= "https://64.media.tumblr.com/9758b9366c8d3eb2507dfe028c2e39e5/9557464f966846c0-84/s400x600/bcc624d0ff4035f785f359b4be0a4544263f4234.png"><br>
+        <br><p3 id="about_us">Sky Jung is a senior at Troy High School and is part of the school's newspaper. She enjoys watching anime (currently watching Haikyuu! To The Top Season 2), exploring shops in LA, and spending time with friends. She speaks English, Korean, Mandarin, and is learning Japanese.
+        </p3>
       </div>
       <div class="column">
         <h3>Jeffrey Mun</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
-        <p3>hello! my name is jeffrey mun and i like anime</p3>
+        <img id = "logo" src= "https://a.wattpad.com/useravatar/nyasa_x.256.780726.jpg"><br>
+        <br><p3 id="about_us">Jeffrey Mun is a senior at Troy High School. He is an active member of Speech and Debate and E-Sports! 
+          He loves reading the news (Politics and Technology),
+          playing games (Overwatch), and listening to music (80's Techno). He speaks Korean, English, and Spanish and is learning Mandarin.
+          </p3>
       </div>
       <div class="column">
         <h3>Nathan Zhang</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
-        <p3>hello! my name is nathan zhang and i like anime</p3>
+        <img id = "logo" src= "https://i.pinimg.com/originals/2b/c0/2d/2bc02d5d6dd287cb209ffeb644bc78d3.png"><br>
+        <br><p3 id="about_us">Nathan Zhang is a senior at Troy High School. He loves to eat good food, play piano, draw, and is always ready for a good nap. He enjoys playing Valorant, ordering any kind of matcha drink, and hanging out with his friends. He speaks Mandarin, English, and German and is learning Korean and Italian.
+        </p3>
       </div>
       <div class="column"> 
         <h3>Anna Zhao</h3> 
-        <img id = "logo" src= "https://i.ibb.co/X50TY4G/T-kuLogo.png"><br>
-        <p3>hello! my name is anna zhao and i like anime</p3>
+        <img id = "logo" src= "https://64.media.tumblr.com/1af6b0bba1b5e004e2221722470f39cd/07579e45fe0b74df-31/s640x960/72e5eed0a1d67b99b7ee6ae53c95e7215a759635.jpg"><br>
+        <br><p3 id="about_us">Anna Katherine Zhao is a senior at Troy High School and is on the yearbook staff. Some of her favorite things include good hugs, jasmine milk tea, the anime Haikyuu, and playing fun games like League of Legends with her friends. She speaks English, Mandarin, and French and is learning Korean. 
+        </p3>
       </div>    
-    </div>
-    <div class = "info">
-      <h3> Communication and cultural understanding are both fundamental qualities in modern society, which is why we were inspired to create Tōku. Tōku is a language-learning, partner-finding app where people from all around the world can connect with each other while practicing new languages.<br><br> </h3>
     </div>
 
 {% endblock%}s
