--- a/backend/static/main.css
+++ b/backend/static/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 body {    
     background: whitesmoke;
@@ -12,10 +12,11 @@ body {
 }
 h1 {
     font-family: 'Josefin Sans', cursive;
-    background-color:#f48b6d;
+    background-color: #E09873; 
     font-size: 70px;
     text-align: center; 
     margin: 40px;
+    margin-bottom: 10px;
     line-height: 1.28571429em;; 
     width: auto;
 }
@@ -84,3 +85,13 @@ p {
 #friendsDescription {
     padding: 30px;
 }
+
+.navbar-expand-lg .navbar-nav .nav-link{
+    padding-left: 20.35%;
+    padding-right: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    background-color: #a5b3d8;
+    margin-right: 0px;
+  }
+
