--- a/backend/static/profile.css
+++ b/backend/static/profile.css
@@ -5,6 +5,7 @@ h1 {
 }
 #container{
   padding-top: 30px;
+  margin-left: auto;
 }
 .circular {
     width: 150px;
@@ -14,6 +15,9 @@ h1 {
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
+    border: 2px;
+    border-style: solid;
+    border-color: black;
   }
   .circular img {
     min-width: 100%;
@@ -37,16 +41,16 @@ h1 {
 }
 
 .navbar-nav{
-    padding: 20px;
+    padding: 10px;
+    padding-top: 0px;
     margin: 20px;
-    font-size: 1.5rem;
+    font-size: 2.0rem;
     font-family: 'Josefin Sans', cursive;
     position: relative;
 }
 .navbar-brand{
-  padding: 20px;
-    margin: 20px;
-    font-size: 2rem;
+    margin-left: 2%;
+    font-size: 3rem;
     font-family: 'Josefin Sans', cursive;
     position: relative;
 }
@@ -56,6 +60,18 @@ h1 {
   text-align: center;
 }
 
-#attributes{
-  padding: 50px;
+.attributes{
+  padding: 10px;
+  margin: auto;
+  text-align: justify;
+}
+
+.profile_tag{
+  font-size: 1.5rem;
+  text-align: left;
+  font-weight: bold;
+  margin-left: auto;
+}
+.profile_attributes{
+  font-size: 1.3rem;
 }
