--- a/backend/templates/friends.html
+++ b/backend/templates/friends.html
@@ -9,7 +9,7 @@
     add_chatinline(); </script-->
 <h1> Friends </h1>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="">Tōku</a>
+    <a class="navbar-brand" href=""> <img src = https://i.ibb.co/9wMy55x/toku-logo-v2.png%22></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
