--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,7 +9,7 @@
     <h1 id='header'>Tōku</h1>   
     <div id="container">
       <div id = "right">
-        <img id = "logo" src= "https://i.ibb.co/9wMy55x/toku-logo-v2.png%22">
+        <img id = "logo" src= "https://i.ibb.co/9wMy55x/toku-logo-v2.png%22"><br>
         <p>Welcome to Tōku!</p>
         <div id = "biography">
           <p1>Want to learn a new language? Why do it alone? Find your language buddy today!</p1> <br>
