--- a/backend/static/main.css
+++ b/backend/static/main.css
@@ -22,8 +22,12 @@ h1 {
 }
 p {
     font-size: 3rem;
-    margin: 10px;
-    padding-top: 20px;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    width: auto;
+    text-align: center;
+
 }
 
 #logo {
@@ -51,8 +55,8 @@ p {
 #container {
     text-align: center;
     width: auto;
-    padding-top: 300px;
-    padding-bottom: 300px;
+    padding-top: 40px;
+    padding-bottom: 200px;
     padding-left: 200px;
     padding-right: 200px;
 }
