--- a/backend/templates/matchpage.html
+++ b/backend/templates/matchpage.html
@@ -25,13 +25,11 @@ extends profile.html
     </nav>
     <div id="matchingPage">
         <div id = "matchingDescription">
-            <h3> 
-                Hello! Congratulations on getting matched!
-            </h3>
-            <h3>
-                Here you'll see people who you matched with. Take a look at what language you will help them with and which language they will help you with!
-                If you click on the "Add Friend" button, you will be able to communicate with them! 
-            </h3>
+            <h2> 
+                Congratulations on getting matched!<br>
+                Here you'll see people who you matched with. <br>Take a look at what language you will help them with and which language they will help you with!<br>
+                Click the "Add Friend" button to communicate with your matches! 
+            </h2>
         </div>
         <div id="tblofmatches">
             <table style ="width:100%" id="match_table">
@@ -46,10 +44,8 @@ extends profile.html
                     <td>{{username}}</td>
                     <td>{{language}}</td>
                     <td>
-                       <form name="{{username}}" method="POST" action='/match'>
-                            
-                            <button class="button" value={{username}} id="user" name="{{username}}" onclick='add()'>Add Friend</button>
-                        </form>
+                        <button class="button" id="{{username}}" name="{{username}}" onclick='addFriend("{{username}}")'>Add Friend</button>
+                        
                     </td>
                     </div>
                 </tr>
@@ -63,8 +59,8 @@ extends profile.html
                 {
                     x.innerHTML = "Friend Added!";
                 }
-                $.getJSON('/match', add_friend(username));
-                alert("test");
+                /* $.getJSON('/match', add_friend(username));
+                alert("test"); */
                 /*window.location.href = "/match/" + username;
                 $.post("/match", {
                     create_username: JSON.stringify(username)
